# WBE_Updater

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/scripts/: common.py  fetch_summoner_id.py  requirements.txt  update_relative_winrate.py
.github/workflows/: add_summoners.yml  add_tier_summoners.yml  summoner_update.yml  update_active_summoner_records.yml  update_relative_winrate.yml  update_stale_summoners.yml  update_static_data.yml  update_summoner_records.yml  update_summoner_records_bottom_tier.yml  update_summoner_records_challenger.yml  update_summoner_records_grandmaster.yml  update_summoner_records_manual.yml  update_summoner_records_master.yml  update_summoner_records_middle_tier.yml  update_summoner_records_top_tier.yml  update_tier_statistics_bottom_tier.yml  update_tier_statistics_manual.yml  update_tier_statistics_middle_tier.yml  update_tier_statistics_top_tier.yml
src/: add_summoners.py  add_tier_summoners.py  common.py  fetch_matches.py  fetch_summoner_id.py  update_active_summoner_records.py  update_relative_winrate.py  update_stale_summoners.py  update_static_data.py  update_statistics.py  update_summoner_records.py
tests/: test_fetch_summoner_id.py  test_update_static_data.py
