[project]
name = "wbe-updater"
version = "0.1.0"
description = "A tool to update WBE files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
